modiicando o config e jwt para deixar as rotas essenciais protegidas